--- a/src/main/resources/ranim/projetpidev/AjouterAgent.fxml
+++ b/src/main/resources/ranim/projetpidev/AjouterAgent.fxml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            xmlns="http://javafx.com/javafx"
+<AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx"
             fx:controller="ranim.projetpidev.controllers.AjouterUserController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="500.0" prefWidth="800.0"
+            stylesheets="@css/style.css">
 
-    <VBox alignment="CENTER" spacing="10" layoutX="50" layoutY="30">
+    <HBox spacing="30" alignment="CENTER" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20">
 
-        <Label text="Inscription Agent"/>
+        <!-- 📸 Partie Gauche : Image -->
+        <VBox alignment="CENTER">
+            <ImageView fitHeight="450" fitWidth="300">
+                <image>
+                    <Image url="@images/logo.jpg"/>
+                </image>
+            </ImageView>
+        </VBox>
 
-        <TextField fx:id="firstName" promptText="Prénom"/>
-        <TextField fx:id="lastName" promptText="Nom"/>
-        <TextField fx:id="email" promptText="Email"/>
-        <TextField fx:id="entryDate" promptText="Date d'entrée (ex: 2025-04-11)"/>
-        <TextField fx:id="password" promptText="Mot de passe"/>
-        <TextField fx:id="companyName" promptText="Nom de l'entreprise"/>
-        <TextField fx:id="location" promptText="Localisation"/>
+        <!-- 📝 Partie Droite : Formulaire -->
+        <VBox spacing="10" alignment="CENTER_LEFT" prefWidth="400">
 
-        <Button text="Ajouter Agent" onAction="#addAgent"/>
-    </VBox>
+            <Label text="Bienvenue sur notre plateforme !" styleClass="welcome-label"/>
+            <Label text="Inscription Agent" styleClass="title-label"/>
+
+            <TextField fx:id="firstName" promptText="Prénom"/>
+            <TextField fx:id="lastName" promptText="Nom"/>
+            <TextField fx:id="email" promptText="Email"/>
+            <DatePicker fx:id="entryDate" promptText="Date d'entrée (ex: 2025-04-11)"/>
+            <PasswordField fx:id="passwordField" promptText="Mot de passe"/>
+            <TextField fx:id="companyName" promptText="Nom de l'entreprise"/>
+            <TextField fx:id="locationField" promptText="Localisation"/>
+
+            <Button text="Ajouter Agent" onAction="#addAgent" styleClass="submit-button"/>
+        </VBox>
+    </HBox>
 </AnchorPane>
