--- a/src/main/resources/ranim/projetpidev/AjouterAgent.fxml
+++ b/src/main/resources/ranim/projetpidev/AjouterAgent.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.web.WebView?>
 <AnchorPane prefHeight="550.0" prefWidth="800.0" stylesheets="@css/tutor-form.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ranim.projetpidev.controllers.AjouterUserController">
 
     <HBox alignment="CENTER" spacing="30" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
@@ -45,8 +46,7 @@
 
             <TextField fx:id="locationField" promptText="Localisation" />
 
-
-            <Button onAction="#addAgent" styleClass="submit-button" text="Ajouter Agent" />
+            <Button onAction="#addAgent" styleClass="submit-button" text="Register" />
         </VBox>
     </HBox>
 </AnchorPane>
