--- a/src/main/resources/ranim/projetpidev/Login.fxml
+++ b/src/main/resources/ranim/projetpidev/Login.fxml
@@ -6,27 +6,21 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="ranim.projetpidev.controllers.LoginController"
-            prefHeight="450.0" prefWidth="500.0"
+            prefHeight="400.0" prefWidth="350.0"
             stylesheets="@css/login.css">
 
-    <VBox alignment="CENTER" spacing="15.0" layoutX="100.0" layoutY="60.0" prefWidth="300.0">
-
-        <Label text="Sign In" styleClass="title-label"/>
+    <VBox alignment="CENTER" spacing="20.0" layoutX="50.0" layoutY="50.0" prefWidth="350.0" AnchorPane.leftAnchor="50" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="50" AnchorPane.bottomAnchor="50">
+        <Label text="Member Login" styleClass="title-label"/>
 
         <TextField fx:id="emailField" promptText="Email" styleClass="input-field"/>
         <PasswordField fx:id="passwordField" promptText="Password" styleClass="input-field"/>
 
-        <Button text="Login" onAction="#handleLogin" styleClass="login-button"/>
+        <Button text="LOGIN" onAction="#handleLogin" styleClass="login-button"/>
 
-        <Label fx:id="errorLabel" styleClass="error-label"/>
+        <Hyperlink text="Forgot Username / Password?" onAction="#goToForgetPassword" styleClass="link-label"/>
 
-        <!-- Lien "Mot de passe oublié ?" -->
-        <Hyperlink text="Mot de passe oublié ?" onAction="#goToForgetPassword" styleClass="link-label"/>
-
-        <!-- Lien vers la page d'inscription -->
         <HBox alignment="CENTER" spacing="5">
-            <Label text="Pas encore de compte ?" />
-            <Hyperlink text="Créer un compte" onAction="#goToAcceuil" styleClass="link-label"/>
+            <Hyperlink text="Create your Account →" onAction="#goToAcceuil" styleClass="link-label"/>
         </HBox>
     </VBox>
 </AnchorPane>
